# goph420-w2025-lab01-stZM

./: README.md  pyproject.toml
examples/: driver_probability.py  driver_seismic.py
src/goph420_lab01/: integration.py
tests/: test_gauss_legendre.py  test_newton_cotes.py
